[package]
name = "commitlint-rs"
version = "0.1.0"
edition = "2021"
authors = ["Matthias Zaunseder"]
license = "MIT"
description = "A commitlint implementation in Rust"
readme = "README.md"
homepage = "https://github.com/zauni/commitlint-rs"
repository = "https://github.com/zauni/commitlint-rs"
keywords = ["cli", "commitlint", "git", "lint", "commit"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
miette = { version = "5.10.0", features = ["fancy"] }
pest = "2.7.6"
pest_derive = "2.7.6"
serde = { version = "1.0.196", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
