[package]
name = "commitguard"
version = "0.1.0"
edition = "2021"
authors = ["Matthias Zaunseder"]
license = "MIT"
description = "A commitlint implementation in Rust"
readme = "README.md"
homepage = "https://github.com/zauni/commitguard"
repository = "https://github.com/zauni/commitguard"
keywords = ["cli", "commitlint", "git", "lint", "commit"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
config = "0.13.4"
miette = { version = "5.10.0", features = ["fancy"] }
pest = "2.7.6"
pest_derive = "2.7.6"
serde = { version = "1.0.196", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
